# Global-Trajectory-Optimization

./: .gitignore  CMakeLists.txt  Doxyfile.in  LICENSE  README.md
cmake/: LibraryConfig.cmake  SetEnv.cmake
examples/: CMakeLists.txt  bar.cpp  example_solution_viewer.py  nonholonomic-car-demo.cpp  pendulum-swingup-demo.cpp  shortest-path-demo.cpp  shortest-path.cpp  shortest_path_viewer.py
glc/: CMakeLists.txt
glc/include/: glc_interface.h  glc_interpolation.h  glc_logging.h  glc_math.h  glc_node.h  glc_numerical_integration.h  glc_parameters.h  glc_planner_core.h  glc_state_equivalence_class.h
glc/src/: .glc_planner_core.cpp.kate-swp  glc_interface.cpp  glc_interpolation.cpp  glc_logging.cpp  glc_math.cpp  glc_node.cpp  glc_numerical_integration.cpp  glc_parameters.cpp  glc_planner_core.cpp  glc_state_equivalence_class.cpp
test/: CMakeLists.txt  sample_interface.h  sample_interfaces.h  test.cpp  test_a.cpp  test_glc_equivalence_relation.cpp  test_glc_interpolation.cpp  test_glc_math.cpp  test_glc_node.cpp  test_glc_numerical_integration.cpp  test_glc_planner_core.cpp  test_glc_state_equivalence_class.cpp
